# FinanceMe

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  instructions.md  instructions_2.md  menu.sh  plan.md  prometheus.yml  pyproject.toml
config/: config.yaml
corpus/: README.md  acme_aml_kyc_policy.md  acme_broker_accreditation.md  acme_business_continuity.md  acme_case_studies_collection.md  acme_collections_policy.md  acme_complaints_policy.md  acme_customer_communications.md  acme_dispute_resolution.md  acme_fraud_prevention.md  acme_glossary_and_faq.md  acme_hardship_policy.md  acme_information_security.md  acme_lending_policy.md  acme_marketing_terms.md  acme_privacy_policy.md  acme_product_info.md  acme_quarterly_strategy_q3_2025.md  acme_sla_handbook.md  acme_training_module_credit.md  acme_training_module_ops.md  acme_vendor_management.md  asic_rg209_synthesis.md  nccp_excerpt.md  silmaril_charter.md
eval/: run.py
scripts/: ingest_corpus.py  vault_entrypoint.sh
src/: cli.py
src/core/: client.py  config.py  metrics.py
src/extensions/rag/: __init__.py  eval_questions.json  evaluator.py  ingester.py  models.py  retriever.py  service.py
src/extensions/tools/: __init__.py  agent.py  models.py  tool_schemas.py
src/storage/: db.py
src/tools/: __init__.py  calendar_tool.py  crm.py  policy.py
