[project]
name = "ai-chat-client"
version = "0.1.0"
description = "Simple LLM Chat Client"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "pydantic>=2.0",
    "typer>=0.9",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "aiofiles>=23.0",
    "uvloop>=0.17",
    "langchain>=0.1",
    "chromadb>=0.4",
    "sentence-transformers>=2.0",
    "ragas>=0.2",
    "pytest>=7.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "lancedb>=0.5",
    "prometheus-client>=0.17",
    "python-multipart>=0.0.6",
    "rapidfuzz>=3.14.5",
    "rouge-score>=0.1.2",
]
